concatenate faq answer and question container and add styles | fix generator inputs padding and margins add gap between inputs | add template constructor to explore section

--- a/front/src/pages/Home/components/Brands/style.scss
+++ b/front/src/pages/Home/components/Brands/style.scss
@@ -7,7 +7,7 @@
             @extend .flex-justify-center;
 
             img {
-                max-width: 200px;
+                max-width: 100px;
                 object-fit: cover;
             }
         }
