--- a/front/src/pages/Home/components/Explore/_style.scss
+++ b/front/src/pages/Home/components/Explore/_style.scss
@@ -1,3 +1,11 @@
 .explore {
     margin-top: 200px;
+
+    &-templates {
+        img {
+            width: 100%;
+            border-radius: 12px;
+        }
+    }
+
 }
